# Kraken

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  COMPONENTS.md  DEPLOYMENT.md  SECURITY.md  TODO.md  spec.md  structure.md
scripts/: generate_test_messages.py  insert_test_data.py  run_scheduler.py  setup_claude_config.py  sync_slack.py  test_slack_connection.py  test_vector_search.py
src/kraken/: config.py  embeddings.py  mcp_server.py  retry.py  scheduler.py  slack_sync.py  sync_tracker.py  vector_store.py
tests/: test_messages.json
